examples/test/testpolicy7936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7936
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key45: value12
      key25: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value14
          key18: value14
      podSelector:
        matchLabels:
          key21: value19
          key22: value18
          key16: value17
